# ohtuvarasto

./: .coverage  .coveragerc  pyproject.toml  tiedosto1.txt  tiedosto2.txt
hakemisto1/: file1.txt
hakemisto2/: file2.txt
